@startuml

class "APIComicbookController" as APIComicbookController

interface "ComicbookOperations" as Operations {
    HttpResponse<Single<List<Comicbook>>> : list()
}
class "ComicbookController" as Controller {
    HttpResponse<Single<List<Comicbook>>> : list()
}
interface "ComickBookClient" as client

Operations <|.. Controller
Operations <|-- client

APIComicbookController *-- client

@enduml